cmake_minimum_required(VERSION 2.8)
project( image_processing )
find_package( OpenCV REQUIRED )
add_executable( compiled_first first.cpp )
target_link_libraries( compiled_first ${OpenCV_LIBS} )
add_executable( compiled_second second.cpp )
target_link_libraries( compiled_second ${OpenCV_LIBS} )
add_executable( compiled_third third.cpp )
target_link_libraries( compiled_third ${OpenCV_LIBS} )
add_executable( compiled_fourth fourth.cpp )
target_link_libraries( compiled_fourth ${OpenCV_LIBS} )