cmake_minimum_required(VERSION 2.8)
project( image_processing )
find_package( OpenCV REQUIRED )
add_executable( compiled_first first.cpp )
target_link_libraries( compiled_first ${OpenCV_LIBS} )
add_executable( compiled_second second.cpp )
target_link_libraries( compiled_second ${OpenCV_LIBS} )
add_executable( compiled_third third.cpp )
target_link_libraries( compiled_third ${OpenCV_LIBS} )
add_executable( compiled_fourth fourth.cpp )
target_link_libraries( compiled_fourth ${OpenCV_LIBS} )
add_executable( compiled_fifth fifth.cpp )
target_link_libraries( compiled_fifth ${OpenCV_LIBS} )
add_executable( compiled_sixth sixth.cpp )
target_link_libraries( compiled_sixth ${OpenCV_LIBS} )
add_executable( compiled_seventh seventh.cpp )
target_link_libraries( compiled_seventh ${OpenCV_LIBS} )
add_executable( compiled_eigth eigth.cpp )
target_link_libraries( compiled_eigth ${OpenCV_LIBS} )